# REDROB

./: .env.example  .gitignore  README.md  app.py  embed_candidates.py  langgraph.json  main.py  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_ops.pckl
.streamlit/: config.toml
src/: __init__.py
src/data/: __init__.py  jd_reader.py  loader.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/models/: __init__.py  candidate.py  job_description.py  scoring.py
src/pipeline/: __init__.py  embedding_filter.py  hybrid_ranker.py  jd_parser.py  llm_reranker.py  output_writer.py  signal_scorer.py
src/utils/: __init__.py  logging_utils.py  text_utils.py
