[project]
name = "redrob"
version = "0.1.0"
description = "AI Candidate Ranking System — REDROB Hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.8.0",
    "fastembed>=0.8.0",
    "ipykernel>=7.3.0",
    "jsonlines>=4.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.1.0",
    "matplotlib>=3.9.0",
    "networkx>=3.3",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "plotly>=6.8.0",
    "pydantic>=2.8.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.9.4",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.1",
    "streamlit>=1.58.0",
    "tqdm>=4.66.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
